# asd

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  config.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/asd-cli/: Cargo.toml
crates/asd-cli/src/: attach.rs  client.rs  control.rs  lib.rs  main.rs  render.rs
crates/asd-cli/tests/: e2e.rs
crates/asd-daemon/: Cargo.toml
crates/asd-daemon/src/: config.rs  conn.rs  lib.rs  registry.rs  restart.rs  session.rs  store.rs
crates/asd-dioxus/: Cargo.toml  README.md  build.rs  package-lock.json  package.json
crates/asd-dioxus/assets/: app.css  bridge.js  vendor-entry.js
crates/asd-dioxus/src/: app.rs  bridge.rs  conn.rs  ghostty-web-bundle.js  lib.rs  main.rs  model.rs  settings.rs  ssh.rs
crates/asd-gui/: Cargo.toml
crates/asd-gui/fonts/: NOTICE.md
crates/asd-gui/src/: conn.rs  ime.rs  key.rs  lib.rs  main.rs  model.rs  render.rs  settings.rs  ssh.rs  theme.rs  view.rs
crates/asd-proto/: Cargo.toml
crates/asd-proto/src/: codec.rs  lib.rs  paths.rs
crates/asd-proto/tests/: codec.rs
crates/asd-tui/: Cargo.toml
crates/asd-tui/src/: conn.rs  key.rs  lib.rs  modal.rs  ui.rs
crates/asd-vt/: Cargo.toml
crates/asd-vt/src/: clip.rs  ghostty.rs  lib.rs  types.rs
crates/asd-vt/tests/: cursor_diag.rs  vt.rs
deploy/npm/: .gitignore  README.md  install.js  package.json
deploy/npm/lib/: shared.js
deploy/npm/test/: smoke.js
docs/superpowers/plans/: 2026-07-21-persistent-session-list.md
docs/superpowers/specs/: 2026-07-17-send-peek-wait-design.md  2026-07-21-persistent-session-list-design.md  2026-07-21-restart-preserve-workspace-design.md
scripts/: share-gui-xpra.sh
src/: main.rs
tests/: e2e.rs
