[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = ""

[workspace.dependencies]
asd-daemon = { path = "crates/asd-daemon" }
asd-proto = { path = "crates/asd-proto" }
asd-vt = { path = "crates/asd-vt" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
libghostty-vt = "0.2"
nix = { version = "0.30", features = ["signal", "process", "term", "fs"] }
portable-pty = "0.9"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "io-std",
    "sync",
    "time",
    "signal",
    "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
