[package]
name = "asd"
description = "asd: GPU terminal mux — CLI, embedded daemon, and GUI in one binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "asd"
path = "src/main.rs"

# `cargo deb` metadata (make deb). The binary goes to /usr/bin; the license
# is taken from `[package].license`.
[package.metadata.deb]
maintainer = "benshi <shiben789@163.com>"
copyright = "2026, benshi"
section = "utils"
priority = "optional"
extended-description = """\
asd is a GPU-rendered terminal multiplexer client with an embedded headless \
daemon: one session = one PTY (shpool-style), a two-pane GUI, and SSH-remote \
session lists. This package ships the full binary (CLI + daemon + GUI)."""
assets = [
    ["target/release/asd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/asd/README.md", "644"],
]

[features]
default = ["local", "dioxus"]
# Terminal side: CLI subcommands + embedded daemon (pulls in portable-pty).
local = ["dep:asd-cli"]
# The GUI: Dioxus Desktop + ghostty-web in a webview. Build
# `--no-default-features --features dioxus` (or `gui`) for a PTY-free,
# GUI-only client (the basis of a viable Windows client).
dioxus = ["dep:asd-dioxus"]
# Compat alias for older build scripts/CI: "the default GUI".
gui = ["dioxus"]

[dependencies]
anyhow = { workspace = true }
asd-cli = { workspace = true, optional = true }
asd-dioxus = { workspace = true, optional = true }

[dev-dependencies]
asd-proto = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = ""

[workspace.dependencies]
asd-cli = { path = "crates/asd-cli" }
asd-dioxus = { path = "crates/asd-dioxus" }
asd-daemon = { path = "crates/asd-daemon" }
asd-proto = { path = "crates/asd-proto" }
asd-tui = { path = "crates/asd-tui" }
asd-vt = { path = "crates/asd-vt" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
libghostty-vt = "0.2"
nix = { version = "0.30", features = ["signal", "process", "term", "fs"] }
portable-pty = "0.9"
postcard = { version = "1", features = ["use-std"] }
ratatui = "0.30.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "io-std",
    "sync",
    "time",
    "signal",
    "process",
] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
