[package]
name = "asd-cli"
description = "asd client, stdio proxy, and embedded daemon — a library the `asd` binary drives"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

# Contract (spec §3): depending on iced/wgpu is forbidden. asd-vt is allowed
# (it forbids iced/wgpu itself) and powers the render client's local terminal.
[dependencies]
anyhow = { workspace = true }
asd-daemon = { workspace = true }
asd-proto = { workspace = true }
asd-tui = { workspace = true }
asd-vt = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
