[package]
name = "asd-dioxus"
description = "asd GPU terminal client (Dioxus + ghostty-web), library entry for the root `asd` binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
asd-proto = { workspace = true }
dioxus = { version = "0.8.0-alpha.0", features = ["desktop"] }
russh = "0.62.2"
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
