[package]
name = "asd-gui"
description = "asd GPU terminal client (iced/wgpu): render, input, dial"
version.workspace = true
edition.workspace = true
license.workspace = true

# Library only (`pub fn run`): the single `asd` binary embeds it behind the
# `gui` feature. Contract (spec §3): NO portable-pty or any PTY/process
# management — the basis of a viable Windows client. asd-vt (rendering) and
# asd-proto (the connection) are allowed; asd-vt/asd-proto forbid iced/wgpu.
[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
asd-proto = { workspace = true }
asd-vt = { workspace = true }
iced = { version = "0.14", features = ["canvas", "tokio"] }
russh = "0.62.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
