[package]
name = "asd-tui"
description = "asd terminal UI client (ratatui): session sidebar + live terminal pane"
version.workspace = true
edition.workspace = true
license.workspace = true

# Contract (spec §3): a terminal-side client like asd-cli — no GUI frameworks,
# no portable-pty/process management. asd-vt renders the attached session; the
# daemon connection speaks asd-proto over the Unix socket.
[dependencies]
anyhow = { workspace = true }
asd-proto = { workspace = true }
asd-vt = { workspace = true }
ratatui = { workspace = true }
tachyonfx = "0.25"
# Display-width-aware truncation for sidebar rows (CJK glyphs are 2 cols); the
# same crate ratatui already uses to lay out cells.
unicode-width = "0.2"
tokio = { workspace = true }
tracing = { workspace = true }
# Signal handlers (SIGHUP/SIGTERM/SIGINT) that restore the terminal on an
# abnormal exit — a Rust panic hook can't catch a kill/hangup.
libc = { workspace = true }
